--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Astral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Astral by HTML5 UP</title>
@@ -14,25 +9,24 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Wrapper-->
-			<div id="wrapper">
+		<div id="wrapper">
 
-				<!-- Nav -->
-					<nav id="nav">
+				<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 						<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>
 					</nav>
 
-				<!-- Main -->
-					<div id="main">
+				<div id="main">
 
-						<!-- Me -->
-							<article id="home" class="panel intro">
+						<article id="home" class="panel intro">
 								<header>
-									<h1>Jane Doe</h1>
-									<p>Senior Astral Projectionist</p>
+									<h1>Karim El Khoury</h1>
+									<p>PhD in Image Processing and Computer Vision</p>
+									<p>
+										Website Coming Soon
+									</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
@@ -40,15 +34,12 @@
 								</a>
 							</article>
 
-						<!-- Work -->
-							<article id="work" class="panel">
+						<article id="work" class="panel">
 								<header>
 									<h2>Work</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									Website Coming Soon
 								</p>
 								<section>
 									<div class="row">
@@ -92,8 +83,7 @@
 								</section>
 							</article>
 
-						<!-- Contact -->
-							<article id="contact" class="panel">
+						<article id="contact" class="panel">
 								<header>
 									<h2>Contact Me</h2>
 								</header>
@@ -122,17 +112,15 @@
 
 					</div>
 
-				<!-- Footer -->
-					<div id="footer">
+				<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Karim El Khoury 2025.
 						</ul>
 					</div>
 
 			</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
