--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Karim El Khoury - Portfolio</title>
+		<title>Astral by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!-- Font Awesome for icons -->
@@ -425,27 +425,22 @@
 						<a href="#home" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter.com/" class="icon brands fa-twitter" target="_blank" rel="noopener noreferrer"><span>Twitter</span></a>
+						<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter" target="_blank" rel="noopener noreferrer"><span>Twitter</span></a>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Home -->
+						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>Karim El Khoury</h1>
-									<p>PhD in Image Processing and Computer Vision</p>
-									<p style="font-size: 0.8em; margin-top: 1.5em;">
-										Hi there! My name is Karim El Khoury, I am Belgo-Lebanese and I hold a PhD in Image Processing and Computer Vision. My main research interests are around efficient analysis of large-scale images, particularly in the use case of remote sensing and medical imaging.
-									</p>
-									<p style="font-size: 0.8em; margin-top: 1em;">
-										I am currently doing my Postdoc at UCLouvain in Belgium under Prof. Benoit Macq <a href="https://scholar.google.be/citations?user=H9pGN70AAAAJ&hl=en" target="_blank" rel="noopener noreferrer">(link)</a> and Prof. Christophe de Vleeschouwer <a href="https://scholar.google.com/citations?user=xb3Zc3cAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">(link)</a>.
-									</p>
+									<h1>Jane Doe</h1>
+									<p>Senior Astral Projectionist</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="https://placehold.co/800x533/333333/ffffff?text=Karim+El+Khoury" alt="Karim El Khoury" />
+									<!-- Using a placeholder image for me.jpg -->
+									<img src="https://placehold.co/800x533/3fadd4/ffffff?text=Jane+Doe" alt="Jane Doe" />
 								</a>
 							</article>
 
@@ -455,45 +450,48 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									Website Coming Soon
+									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
+									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+									luctus elit eget interdum.
 								</p>
 								<section>
 									<div class="row">
+										<!-- Placeholder images for the gallery -->
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Project+1" alt=""></a>
+											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Pic+01" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Project+2" alt=""></a>
+											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Pic+02" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Project+3" alt=""></a>
+											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Pic+03" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Project+4" alt=""></a>
+											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Pic+04" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Project+5" alt=""></a>
+											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Pic+05" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Project+6" alt=""></a>
+											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Pic+06" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Project+7" alt=""></a>
+											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Pic+07" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Project+8" alt=""></a>
+											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Pic+08" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Project+9" alt=""></a>
+											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Pic+09" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Project+10" alt=""></a>
+											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Pic+10" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Project+11" alt=""></a>
+											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Pic+11" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Project+12" alt=""></a>
+											<a href="#" class="image fit"><img src="https://placehold.co/400x250/555/fff?text=Pic+12" alt=""></a>
 										</div>
 									</div>
 								</section>
@@ -532,7 +530,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Karim El Khoury 2025.</li>
+							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 
