--- a/index.html
+++ b/index.html
@@ -26,17 +26,28 @@
 					</nav>
 
 				<!-- Main -->
-					<div id="main">
+        <div id="main">
 
-						<!-- Me -->
-							<article id="home" class="panel intro">
+						<article id="home" class="panel intro">
 								<header>
-									<h1>Jane Doe</h1>
-									<p>Senior Astral Projectionist</p>
+									<h1>Karim El Khoury</h1>
+									<p>PhD in Image Processing and Computer Vision</p>
 								</header>
+								<p>
+									Hi there!
+								</p>
+								<p>
+									My name is **Karim El Khoury**, I am Belgo-Lebanese and I hold a PhD in Image Processing and Computer Vision. 
+									My main research interests are around efficient analysis of large-scale images, particularly in the use case of remote sensing and medical imaging.
+								</p>
+								<p>
+									I am currently doing my Postdoc at UCLouvain in Belgium under 
+									<a href="https://placeholder-url-benoit-macq.com" target="_blank" rel="noopener noreferrer">Prof Benoit Macq</a> and 
+									<a href="https://placeholder-url-christophe-de-vleeshower.com" target="_blank" rel="noopener noreferrer">Prof. Christophe de Vleeshower</a>.
+								</p>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img src="https://placehold.co/800x533/3fadd4/ffffff?text=Karim+El+Khoury" alt="Karim El Khoury Portrait" onerror="this.onerror=null; this.src='https://placehold.co/800x533/3fadd4/ffffff?text=Karim+El+Khoury';" />
 								</a>
 							</article>
 
@@ -125,7 +136,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Karim El Khoury 2025</li>
 						</ul>
 					</div>
 
