--- a/index.html
+++ b/index.html
@@ -34,21 +34,9 @@
 									<p>PhD in Image Processing and Computer Vision</p>
 								</header>
 								<p>
-									Hi there!
+									Website Under Construction
 								</p>
-								<p>
-									My name is **Karim El Khoury**, I am Belgo-Lebanese and I hold a PhD in Image Processing and Computer Vision. 
-									My main research interests are around efficient analysis of large-scale images, particularly in the use case of remote sensing and medical imaging.
-								</p>
-								<p>
-									I am currently doing my Postdoc at UCLouvain in Belgium under 
-									<a href="https://placeholder-url-benoit-macq.com" target="_blank" rel="noopener noreferrer">Prof Benoit Macq</a> and 
-									<a href="https://placeholder-url-christophe-de-vleeshower.com" target="_blank" rel="noopener noreferrer">Prof. Christophe de Vleeshower</a>.
-								</p>
-								<a href="#work" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="https://placehold.co/800x533/3fadd4/ffffff?text=Karim+El+Khoury" alt="Karim El Khoury Portrait" onerror="this.onerror=null; this.src='https://placehold.co/800x533/3fadd4/ffffff?text=Karim+El+Khoury';" />
-								</a>
+	
 							</article>
 
 						<!-- Work -->
@@ -151,3 +139,4 @@
 
 	</body>
 </html>
+
